[project]
name = "causal-morz"
version = "0.1.0"
description = "Causal Inference with Morz Data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "causaldata>=0.1.5",
    "causalgraphicalmodels>=0.0.4",
    "causalinference>=0.1.3",
    "dowhy>=0.11.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "pip>=24.3.1",
]
